# garage

./: db.sqlite3  package-lock.json  pyproject.toml
config/: settings.py  urls.py
garagem/: admin.py  models.py
garagem/migrations/: 0001_initial.py  0002_veiculo_foto.py  0003_modelo_nome.py
garagem/models/: __init__.py  acessorio.py  cor.py  marca.py  modelo.py  veiculo.py
garagem/serializers/: __init__.py  categoria.py  modelo.py  veiculo.py
garagem/views/: acessorio.py  categoria.py  cor.py  marca.py  modelo.py  veiculo.py
uploader/migrations/: 0001_initial.py
usuario/migrations/: 0001_initial.py
